--- a/表白网页款式一源码/index.html
+++ b/表白网页款式一源码/index.html
@@ -39,7 +39,7 @@
 				<canvas id="garden"></canvas>
 				<div id="words">
 					<div id="messages">
-						某某, 这是我们认识的第
+						Olivia, 这是我们认识的第
 						<div id="elapseClock"></div>
 					</div>
 					<div id="loveu">
